# ClipBot

./: .gitignore  README.md  pyproject.toml
src/: clipboard_manager.py  color_parser.py  date_parser.py  hash_generator.py  line_parser.py  main.py  text_analyzer.py
tests/: test_color_parser.py  test_date_parser.py  test_hash_generator.py  test_line_parser.py  test_text_analyzer.py
